# hledger-close-cta

./: .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project.freeze  hledger-close-cta.cabal
.github/workflows/: ci.yaml  release.yaml
app/: Main.hs
examples/: 2024-closing.journal  2024.journal  closing-2024.journal  personal.journal
src/Hledger/: CloseCta.hs
src/Hledger/CloseCta/: Options.hs  Rates.hs
test/: Spec.hs
test/testdata/: basic.golden  basic.journal  inferred-only.golden  inferred-only.journal  inferred.golden  inferred.journal  long-falling.golden  long-falling.journal  long-rising.golden  long-rising.journal  sequential-2025.golden  sequential.journal  short-falling.golden  short-falling.journal  short-rising.golden  short-rising.journal
