cabal-version:      3.0
name:               hledger-close-cta
version:            0.1.0.0
synopsis:           hledger add-on: year-end closing with currency translation adjustment
description:
    Generates a year-end closing journal fragment for multi-currency ledgers:
    retained-earnings sweep, layer pinning to a base currency at closing rates,
    and CTA revaluation of live positions (IAS 21 / ASC 830 style).
license:            MIT
license-file:       LICENSE
author:             Mikhail Lukianchenko
maintainer:         ml@akabos.com
category:           Finance
build-type:         Simple
homepage:           https://github.com/mikluko/hledger-close-cta
bug-reports:        https://github.com/mikluko/hledger-close-cta/issues
extra-doc-files:
    CHANGELOG.md
    README.md
tested-with:        GHC ==9.10.2

source-repository head
    type:     git
    location: https://github.com/mikluko/hledger-close-cta

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wredundant-constraints

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:
        Hledger.CloseCta
        Hledger.CloseCta.Options
        Hledger.CloseCta.Rates
    build-depends:
        base >=4.20 && <5,
        containers >=0.6 && <0.9,
        hledger-lib ==1.52.*,
        text >=2.0 && <2.2,
        time >=1.12 && <1.15
    default-language: GHC2021

executable hledger-close-cta
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base,
        hledger ==1.52.*,
        hledger-close-cta,
        hledger-lib,
        text
    default-language: GHC2021

test-suite hledger-close-cta-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base,
        bytestring,
        filepath,
        hledger-close-cta,
        hledger-lib,
        tasty,
        tasty-golden,
        tasty-hunit,
        text,
        time,
        transformers
    default-language: GHC2021
